<resources>
    <string name="app_name">GetIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list">There are no items to show</string>
    <string name="status">Status:</string>
    <string name="status_taken">Taken</string>
    <string name="status_not_taken">Available</string>

    <!-- menu -->
    <string name="menu_services">Services</string>
    <string name="service">Service</string>
    <string name="menu_items">Items</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_github">Github</string>
    <string name="submenu_header">Communicate</string>
    <string name="edit_profile">Edit profile</string>

    <!--auth-->
    <string name="login_main_header">Welcome</string>
    <string name="login_secondary_header">Sign in to open a world of shared items</string>
    <string name="register_secondary_header">Sign up to open a world of shared items</string>
    <string name="signInHeader">Sign in with credentials</string>
    <string name="signUpHeader">Sign up with credentials</string>
    <string name="loginPlaceholder">Login</string>
    <string name="passPlaceholder">Password</string>
    <string name="lastNamePlaceholder">Last name</string>
    <string name="firstNamePlaceholder">First name</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passConfirmPlaceholder">Confirm password</string>
    <string name="signInBtn">Sign in</string>
    <string name="signUpBtn">Sign up</string>
    <string name="signUpRedirect">Create new account</string>
    <string name="signInRedirect">Login into account</string>
    <string name="registerSuccess">Registration successful!</string>

    <!-- profile -->
    <string name="online_status">Online</string>
    <string name="user_information_header">User information</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="contact_information_header">Contact information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>

    <!--preferences-->
    <string name="user_pref">token_pref</string>
    <string name="token">token_key</string>
    <string name="id">id_key</string>

    <!--error codes-->
    <string name="validation_error">"Validation error occurred"</string>
    <string name="code_116">Username or password is incorrect</string>
    <string name="code_123">Login is already taken</string>
    <string name="code_124">Email is already taken</string>
    <string name="fetch_err">Fetching error</string>
    <string name="update_success">"Update profile success"</string>

    <!-- bundle keys -->
    <string name="service_id">service_id</string>
    <string name="account_data">account_data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
