<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_services">

    <fragment
        android:id="@+id/nav_services"
        android:name="com.eliasb.apz_android.ui.availableServices.AvailableServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_available_services"
        >
        <action
            android:id="@+id/action_nav_services_to_availableServiceFragment"
            app:destination="@id/availableServiceFragment" />
    </fragment>

    <fragment
        android:id="@+id/availableServiceFragment"
        android:name="com.eliasb.apz_android.ui.availableServices.AvailableServiceFragment"
        android:label="@string/service"
        tools:layout="@layout/fragment_available_service" />

    <fragment
        android:id="@+id/nav_active_items"
        android:name="com.eliasb.apz_android.ui.activeItems.ActiveItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items_list" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.eliasb.apz_android.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.eliasb.apz_android.ui.editProfile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>